# DundeeLang

./: CMakeLists.txt  README.md  includes.h  main.cpp
Interpreter/: DataTypes.cpp  DataTypes.h  Loops.cpp  Loops.h  Read.cpp  Read.h  Run.cpp  Run.h
Libraries/: Math.cpp  Math.h
